[gd_scene load_steps=4 format=3 uid="uid://btxm2ffcwfwsv"]

[ext_resource type="Script" path="res://scenes/ui/ExitConfirmationModal.gd" id="1_0x0x0"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 20
font_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2"]
font_size = 16
font_color = Color(0.9, 0.9, 0.9, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.3, 0.3, 0.3, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.5, 0.5, 0.5, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ExitConfirmationModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x0x0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="ModalContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -120.0
offset_right = 250.0
offset_bottom = 120.0

[node name="ModalBackground" type="ColorRect" parent="ModalContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.15, 0.15, 1)
z_index = -1

[node name="Border" type="ColorRect" parent="ModalContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.3, 0.3, 0.3, 1)
z_index = -2

[node name="InnerBackground" type="ColorRect" parent="ModalContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
color = Color(0.1, 0.1, 0.1, 1)
z_index = -1

[node name="Title" type="Label" parent="ModalContainer"]
layout_mode = 2
text = "Exit to Main Menu"
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_1")

[node name="Spacer1" type="Control" parent="ModalContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="Description" type="Label" parent="ModalContainer"]
layout_mode = 2
text = "Your progress will be saved automatically."
horizontal_alignment = 1
label_settings = SubResource("LabelSettings_2")

[node name="Spacer2" type="Control" parent="ModalContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="ButtonContainer" type="HBoxContainer" parent="ModalContainer"]
layout_mode = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="ModalContainer/ButtonContainer"]
layout_mode = 2
text = "Exit"
custom_minimum_size = Vector2(120, 40)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")

[node name="CancelButton" type="Button" parent="ModalContainer/ButtonContainer"]
layout_mode = 2
text = "Cancel"
custom_minimum_size = Vector2(120, 40)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1") 